--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "bootstrap": "^4.3.1",
     "core-js": "^3.32.1",
     "font-awesome": "^4.7.0",
