--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^4.3.1",
     "core-js": "^3.32.1",
     "font-awesome": "^4.7.0",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.8",
