--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "core-js": "^3.32.1",
     "font-awesome": "^4.7.0",
     "vue": "^3.2.0",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.8",
